# sstt-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: codegen01.py  codegen02.py  codegen03.py  demo_agent_memory.py  demo_clean.py  demo_comprehensive.py  demo_document_management.py  demo_enhanced_memory.py  demo_knowledge_graphs.py  demo_llm_integration.py  demo_medical_processes.py  demo_research_methodology.py  demo_software_engineering.py  example02_agent.py  validate_design_principles.py
src/sstt_agent/: __init__.py  canonical.py  extract.py  graph.py  intent.py  pipeline.py  retrieve.py  storage_duckdb.py
